--- a/.github/workflows/noetic.yml
+++ b/.github/workflows/noetic.yml
@@ -7,9 +7,6 @@ on:
   pull_request:
     branches: [ master ]
 
-  # schedule:
-  #   - cron:  '0 0 * * *' # at the end of every day
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -35,7 +32,10 @@ jobs:
           token: ${{ secrets.PUSH_TOKEN }}
 
       - name: Build
-        run: .ci/build_package.sh
+        run: .ci/build_package.sh /tmp/debs_to_push
 
-      - name: Deploy
-        run: .ci/push_to_ppa.sh
+      - name: Deploy to unstable
+        run: .ci_scripts/push_to_ppa.sh /tmp/debs_to_push unstable
+
+      - name: Deploy to stable
+        run: .ci_scripts/push_to_ppa.sh /tmp/debs_to_push stable
