--- a/package/DEBIAN/control
+++ b/package/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: mrs-geographiclib-datasets
 Version: 1.0.0
-Architecture: any
+Architecture: all
 Maintainer: Tomas Baca <tomas.baca@fel.cvut.cz>
 Description: Automatic trigger for downloading geographic-lib datasets
 Depends: geographiclib-tools
